Trabalho 6/expr.output
Terminals unused in grammar

   T_FIM
   T_TRUE
   T_FALSE


Grammar

    0 $accept: Programa $end

    1 Programa: ListaFuncoes BlocoPrincipal
    2         | BlocoPrincipal

    3 ListaFuncoes: ListaFuncoes Funcao
    4             | Funcao

    5 Funcao: TipoRetorno T_ID T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES BlocoPrincipal
    6       | TipoRetorno T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES BlocoPrincipal

    7 TipoRetorno: T_VOID
    8            | T_INT
    9            | T_DOUBLE
   10            | T_STRING

   11 DeclParametros: DeclParametros T_VIRGULA Parametro
   12               | Parametro

   13 Parametro: Tipo T_ID

   14 BlocoPrincipal: T_ABRE_CHAVES Declaracoes ListaCmd T_FECHA_CHAVES
   15               | T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES

   16 Declaracoes: Declaracoes Declaracao
   17            | Declaracao

   18 Declaracao: Tipo ListaId T_PONTO_E_VIRGULA

   19 Tipo: T_INT
   20     | T_DOUBLE
   21     | T_STRING

   22 ListaId: ListaId T_VIRGULA T_ID
   23        | T_ID

   24 Bloco: T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES

   25 ListaCmd: ListaCmd Comando
   26         | Comando

   27 Comando: CmdSe
   28        | CmdEnquanto
   29        | CmdAtrib
   30        | CmdEscrita
   31        | CmdLeitura
   32        | ChamadaProc
   33        | Retorno

   34 Retorno: T_RETURN ExpressaoAritmetica T_PONTO_E_VIRGULA
   35        | T_RETURN T_LITERAL T_PONTO_E_VIRGULA

   36 CmdSe: T_IF T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco
   37      | T_IF T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco NLogico T_ELSE MLogico Bloco

   38 NLogico: %empty

   39 CmdEnquanto: T_WHILE MLogico T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco

   40 CmdAtrib: T_ID T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   41         | T_ID T_IGUAL T_LITERAL T_PONTO_E_VIRGULA
   42         | T_ID T_ADICAO T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   43         | T_ID T_SUBTRACAO T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   44         | T_ID T_ADICAO T_ADICAO T_PONTO_E_VIRGULA
   45         | T_ID T_SUBTRACAO T_SUBTRACAO T_PONTO_E_VIRGULA

   46 CmdEscrita: T_PRINT CmdEscritaMarcador T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   47           | T_PRINT CmdEscritaMarcador T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

   48 CmdEscritaMarcador: %empty

   49 CmdLeitura: T_READ T_ABRE_PARENTESES T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

   50 ChamadaProc: ChamadaFuncao T_PONTO_E_VIRGULA

   51 ChamadaFuncao: T_ID T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   52              | T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES

   53 ListaParametros: ListaParametros T_VIRGULA ExpressaoAritmetica
   54                | ListaParametros T_VIRGULA T_LITERAL
   55                | ExpressaoAritmetica
   56                | T_LITERAL

   57 ExpressaoAritmetica: ExpressaoAritmetica T_ADICAO TExpressaoAritmetica
   58                    | ExpressaoAritmetica T_SUBTRACAO TExpressaoAritmetica
   59                    | ExpressaoAritmetica T_BIT_DIREITA TExpressaoAritmetica
   60                    | ExpressaoAritmetica T_BIT_ESQUERDA TExpressaoAritmetica
   61                    | TExpressaoAritmetica

   62 TExpressaoAritmetica: TExpressaoAritmetica T_MULTIPLICACAO FExpressaoAritmetica
   63                     | TExpressaoAritmetica T_DIVISAO FExpressaoAritmetica
   64                     | TExpressaoAritmetica T_RESTO FExpressaoAritmetica
   65                     | FExpressaoAritmetica
   66                     | ChamadaFuncao

   67 FExpressaoAritmetica: T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES
   68                     | T_SUBTRACAO FExpressaoAritmetica
   69                     | T_NUM
   70                     | T_ID

   71 ExpressaoLogica: ExpressaoLogica T_AND MLogico FExpressaoLogica
   72                | ExpressaoLogica T_OR MLogico FExpressaoLogica
   73                | FExpressaoLogica

   74 MLogico: %empty

   75 FExpressaoLogica: T_NOT FExpressaoLogica
   76                 | T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES
   77                 | ExpressaoAritmetica T_IGUAL_IGUAL ExpressaoAritmetica
   78                 | ExpressaoAritmetica T_DIFERENTE ExpressaoAritmetica
   79                 | ExpressaoAritmetica T_MAIOR ExpressaoAritmetica
   80                 | ExpressaoAritmetica T_MAIOR_IGUAL ExpressaoAritmetica
   81                 | ExpressaoAritmetica T_MENOR ExpressaoAritmetica
   82                 | ExpressaoAritmetica T_MENOR_IGUAL ExpressaoAritmetica


Terminals, with rules where they appear

$end (0) 0
error (256)
T_BIT_DIREITA (258) 59
T_BIT_ESQUERDA (259) 60
T_ADICAO (260) 42 44 57
T_SUBTRACAO (261) 43 45 58 68
T_MULTIPLICACAO (262) 62
T_DIVISAO (263) 63
T_RESTO (264) 64
T_IGUAL (265) 40 41 42 43
T_ABRE_PARENTESES (266) 5 6 36 37 39 46 47 49 51 52 67 76
T_FECHA_PARENTESES (267) 5 6 36 37 39 46 47 49 51 52 67 76
T_ABRE_CHAVES (268) 14 15 24
T_FECHA_CHAVES (269) 14 15 24
T_INT (270) 8 19
T_DOUBLE (271) 9 20
T_STRING (272) 10 21
T_VOID (273) 7
T_IF (274) 36 37
T_WHILE (275) 39
T_ELSE (276) 37
T_PRINT (277) 46 47
T_READ (278) 49
T_RETURN (279) 34 35
T_ID (280) 5 6 13 22 23 40 41 42 43 44 45 49 51 52 70
T_LITERAL (281) 35 41 47 54 56
T_FIM (282)
T_NUM (283) 69
T_VIRGULA (284) 11 22 53 54
T_PONTO_E_VIRGULA (285) 18 34 35 40 41 42 43 44 45 46 47 49 50
T_AND (286) 71
T_NOT (287) 75
T_OR (288) 72
T_TRUE (289)
T_FALSE (290)
T_MAIOR_IGUAL (291) 80
T_MENOR_IGUAL (292) 82
T_DIFERENTE (293) 78
T_IGUAL_IGUAL (294) 77
T_MAIOR (295) 79
T_MENOR (296) 81


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Programa (43)
    on left: 1 2, on right: 0
ListaFuncoes (44)
    on left: 3 4, on right: 1 3
Funcao (45)
    on left: 5 6, on right: 3 4
TipoRetorno (46)
    on left: 7 8 9 10, on right: 5 6
DeclParametros (47)
    on left: 11 12, on right: 5 11
Parametro (48)
    on left: 13, on right: 11 12
BlocoPrincipal (49)
    on left: 14 15, on right: 1 2 5 6
Declaracoes (50)
    on left: 16 17, on right: 14 16
Declaracao (51)
    on left: 18, on right: 16 17
Tipo (52)
    on left: 19 20 21, on right: 13 18
ListaId (53)
    on left: 22 23, on right: 18 22
Bloco (54)
    on left: 24, on right: 36 37 39
ListaCmd (55)
    on left: 25 26, on right: 14 15 24 25
Comando (56)
    on left: 27 28 29 30 31 32 33, on right: 25 26
Retorno (57)
    on left: 34 35, on right: 33
CmdSe (58)
    on left: 36 37, on right: 27
NLogico (59)
    on left: 38, on right: 37
CmdEnquanto (60)
    on left: 39, on right: 28
CmdAtrib (61)
    on left: 40 41 42 43 44 45, on right: 29
CmdEscrita (62)
    on left: 46 47, on right: 30
CmdEscritaMarcador (63)
    on left: 48, on right: 46 47
CmdLeitura (64)
    on left: 49, on right: 31
ChamadaProc (65)
    on left: 50, on right: 32
ChamadaFuncao (66)
    on left: 51 52, on right: 50 66
ListaParametros (67)
    on left: 53 54 55 56, on right: 51 53 54
ExpressaoAritmetica (68)
    on left: 57 58 59 60 61, on right: 34 40 42 43 46 53 55 57 58 59
    60 67 77 78 79 80 81 82
TExpressaoAritmetica (69)
    on left: 62 63 64 65 66, on right: 57 58 59 60 61 62 63 64
FExpressaoAritmetica (70)
    on left: 67 68 69 70, on right: 62 63 64 65 68
ExpressaoLogica (71)
    on left: 71 72 73, on right: 36 37 39 71 72 76
MLogico (72)
    on left: 74, on right: 36 37 39 71 72
FExpressaoLogica (73)
    on left: 75 76 77 78 79 80 81 82, on right: 71 72 73 75


State 0

    0 $accept: . Programa $end

    T_ABRE_CHAVES  shift, and go to state 1
    T_INT          shift, and go to state 2
    T_DOUBLE       shift, and go to state 3
    T_STRING       shift, and go to state 4
    T_VOID         shift, and go to state 5

    Programa        go to state 6
    ListaFuncoes    go to state 7
    Funcao          go to state 8
    TipoRetorno     go to state 9
    BlocoPrincipal  go to state 10


State 1

   14 BlocoPrincipal: T_ABRE_CHAVES . Declaracoes ListaCmd T_FECHA_CHAVES
   15               | T_ABRE_CHAVES . ListaCmd T_FECHA_CHAVES

    T_INT     shift, and go to state 11
    T_DOUBLE  shift, and go to state 12
    T_STRING  shift, and go to state 13
    T_IF      shift, and go to state 14
    T_WHILE   shift, and go to state 15
    T_PRINT   shift, and go to state 16
    T_READ    shift, and go to state 17
    T_RETURN  shift, and go to state 18
    T_ID      shift, and go to state 19

    Declaracoes    go to state 20
    Declaracao     go to state 21
    Tipo           go to state 22
    ListaCmd       go to state 23
    Comando        go to state 24
    Retorno        go to state 25
    CmdSe          go to state 26
    CmdEnquanto    go to state 27
    CmdAtrib       go to state 28
    CmdEscrita     go to state 29
    CmdLeitura     go to state 30
    ChamadaProc    go to state 31
    ChamadaFuncao  go to state 32


State 2

    8 TipoRetorno: T_INT .

    $default  reduce using rule 8 (TipoRetorno)


State 3

    9 TipoRetorno: T_DOUBLE .

    $default  reduce using rule 9 (TipoRetorno)


State 4

   10 TipoRetorno: T_STRING .

    $default  reduce using rule 10 (TipoRetorno)


State 5

    7 TipoRetorno: T_VOID .

    $default  reduce using rule 7 (TipoRetorno)


State 6

    0 $accept: Programa . $end

    $end  shift, and go to state 33


State 7

    1 Programa: ListaFuncoes . BlocoPrincipal
    3 ListaFuncoes: ListaFuncoes . Funcao

    T_ABRE_CHAVES  shift, and go to state 1
    T_INT          shift, and go to state 2
    T_DOUBLE       shift, and go to state 3
    T_STRING       shift, and go to state 4
    T_VOID         shift, and go to state 5

    Funcao          go to state 34
    TipoRetorno     go to state 9
    BlocoPrincipal  go to state 35


State 8

    4 ListaFuncoes: Funcao .

    $default  reduce using rule 4 (ListaFuncoes)


State 9

    5 Funcao: TipoRetorno . T_ID T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES BlocoPrincipal
    6       | TipoRetorno . T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES BlocoPrincipal

    T_ID  shift, and go to state 36


State 10

    2 Programa: BlocoPrincipal .

    $default  reduce using rule 2 (Programa)


State 11

   19 Tipo: T_INT .

    $default  reduce using rule 19 (Tipo)


State 12

   20 Tipo: T_DOUBLE .

    $default  reduce using rule 20 (Tipo)


State 13

   21 Tipo: T_STRING .

    $default  reduce using rule 21 (Tipo)


State 14

   36 CmdSe: T_IF . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco
   37      | T_IF . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco NLogico T_ELSE MLogico Bloco

    T_ABRE_PARENTESES  shift, and go to state 37


State 15

   39 CmdEnquanto: T_WHILE . MLogico T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco

    $default  reduce using rule 74 (MLogico)

    MLogico  go to state 38


State 16

   46 CmdEscrita: T_PRINT . CmdEscritaMarcador T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   47           | T_PRINT . CmdEscritaMarcador T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    $default  reduce using rule 48 (CmdEscritaMarcador)

    CmdEscritaMarcador  go to state 39


State 17

   49 CmdLeitura: T_READ . T_ABRE_PARENTESES T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ABRE_PARENTESES  shift, and go to state 40


State 18

   34 Retorno: T_RETURN . ExpressaoAritmetica T_PONTO_E_VIRGULA
   35        | T_RETURN . T_LITERAL T_PONTO_E_VIRGULA

    T_SUBTRACAO        shift, and go to state 41
    T_ABRE_PARENTESES  shift, and go to state 42
    T_ID               shift, and go to state 43
    T_LITERAL          shift, and go to state 44
    T_NUM              shift, and go to state 45

    ChamadaFuncao         go to state 46
    ExpressaoAritmetica   go to state 47
    TExpressaoAritmetica  go to state 48
    FExpressaoAritmetica  go to state 49


State 19

   40 CmdAtrib: T_ID . T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   41         | T_ID . T_IGUAL T_LITERAL T_PONTO_E_VIRGULA
   42         | T_ID . T_ADICAO T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   43         | T_ID . T_SUBTRACAO T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   44         | T_ID . T_ADICAO T_ADICAO T_PONTO_E_VIRGULA
   45         | T_ID . T_SUBTRACAO T_SUBTRACAO T_PONTO_E_VIRGULA
   51 ChamadaFuncao: T_ID . T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   52              | T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES

    T_ADICAO           shift, and go to state 50
    T_SUBTRACAO        shift, and go to state 51
    T_IGUAL            shift, and go to state 52
    T_ABRE_PARENTESES  shift, and go to state 53


State 20

   14 BlocoPrincipal: T_ABRE_CHAVES Declaracoes . ListaCmd T_FECHA_CHAVES
   16 Declaracoes: Declaracoes . Declaracao

    T_INT     shift, and go to state 11
    T_DOUBLE  shift, and go to state 12
    T_STRING  shift, and go to state 13
    T_IF      shift, and go to state 14
    T_WHILE   shift, and go to state 15
    T_PRINT   shift, and go to state 16
    T_READ    shift, and go to state 17
    T_RETURN  shift, and go to state 18
    T_ID      shift, and go to state 19

    Declaracao     go to state 54
    Tipo           go to state 22
    ListaCmd       go to state 55
    Comando        go to state 24
    Retorno        go to state 25
    CmdSe          go to state 26
    CmdEnquanto    go to state 27
    CmdAtrib       go to state 28
    CmdEscrita     go to state 29
    CmdLeitura     go to state 30
    ChamadaProc    go to state 31
    ChamadaFuncao  go to state 32


State 21

   17 Declaracoes: Declaracao .

    $default  reduce using rule 17 (Declaracoes)


State 22

   18 Declaracao: Tipo . ListaId T_PONTO_E_VIRGULA

    T_ID  shift, and go to state 56

    ListaId  go to state 57


State 23

   15 BlocoPrincipal: T_ABRE_CHAVES ListaCmd . T_FECHA_CHAVES
   25 ListaCmd: ListaCmd . Comando

    T_FECHA_CHAVES  shift, and go to state 58
    T_IF            shift, and go to state 14
    T_WHILE         shift, and go to state 15
    T_PRINT         shift, and go to state 16
    T_READ          shift, and go to state 17
    T_RETURN        shift, and go to state 18
    T_ID            shift, and go to state 19

    Comando        go to state 59
    Retorno        go to state 25
    CmdSe          go to state 26
    CmdEnquanto    go to state 27
    CmdAtrib       go to state 28
    CmdEscrita     go to state 29
    CmdLeitura     go to state 30
    ChamadaProc    go to state 31
    ChamadaFuncao  go to state 32


State 24

   26 ListaCmd: Comando .

    $default  reduce using rule 26 (ListaCmd)


State 25

   33 Comando: Retorno .

    $default  reduce using rule 33 (Comando)


State 26

   27 Comando: CmdSe .

    $default  reduce using rule 27 (Comando)


State 27

   28 Comando: CmdEnquanto .

    $default  reduce using rule 28 (Comando)


State 28

   29 Comando: CmdAtrib .

    $default  reduce using rule 29 (Comando)


State 29

   30 Comando: CmdEscrita .

    $default  reduce using rule 30 (Comando)


State 30

   31 Comando: CmdLeitura .

    $default  reduce using rule 31 (Comando)


State 31

   32 Comando: ChamadaProc .

    $default  reduce using rule 32 (Comando)


State 32

   50 ChamadaProc: ChamadaFuncao . T_PONTO_E_VIRGULA

    T_PONTO_E_VIRGULA  shift, and go to state 60


State 33

    0 $accept: Programa $end .

    $default  accept


State 34

    3 ListaFuncoes: ListaFuncoes Funcao .

    $default  reduce using rule 3 (ListaFuncoes)


State 35

    1 Programa: ListaFuncoes BlocoPrincipal .

    $default  reduce using rule 1 (Programa)


State 36

    5 Funcao: TipoRetorno T_ID . T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES BlocoPrincipal
    6       | TipoRetorno T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES BlocoPrincipal

    T_ABRE_PARENTESES  shift, and go to state 61


State 37

   36 CmdSe: T_IF T_ABRE_PARENTESES . ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco
   37      | T_IF T_ABRE_PARENTESES . ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco NLogico T_ELSE MLogico Bloco

    T_SUBTRACAO        shift, and go to state 41
    T_ABRE_PARENTESES  shift, and go to state 62
    T_ID               shift, and go to state 43
    T_NUM              shift, and go to state 45
    T_NOT              shift, and go to state 63

    ChamadaFuncao         go to state 46
    ExpressaoAritmetica   go to state 64
    TExpressaoAritmetica  go to state 48
    FExpressaoAritmetica  go to state 49
    ExpressaoLogica       go to state 65
    FExpressaoLogica      go to state 66


State 38

   39 CmdEnquanto: T_WHILE MLogico . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco

    T_ABRE_PARENTESES  shift, and go to state 67


State 39

   46 CmdEscrita: T_PRINT CmdEscritaMarcador . T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   47           | T_PRINT CmdEscritaMarcador . T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ABRE_PARENTESES  shift, and go to state 68


State 40

   49 CmdLeitura: T_READ T_ABRE_PARENTESES . T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ID  shift, and go to state 69


State 41

   68 FExpressaoAritmetica: T_SUBTRACAO . FExpressaoAritmetica

    T_SUBTRACAO        shift, and go to state 41
    T_ABRE_PARENTESES  shift, and go to state 42
    T_ID               shift, and go to state 70
    T_NUM              shift, and go to state 45

    FExpressaoAritmetica  go to state 71


State 42

   67 FExpressaoAritmetica: T_ABRE_PARENTESES . ExpressaoAritmetica T_FECHA_PARENTESES

    T_SUBTRACAO        shift, and go to state 41
    T_ABRE_PARENTESES  shift, and go to state 42
    T_ID               shift, and go to state 43
    T_NUM              shift, and go to state 45

    ChamadaFuncao         go to state 46
    ExpressaoAritmetica   go to state 72
    TExpressaoAritmetica  go to state 48
    FExpressaoAritmetica  go to state 49


State 43

   51 ChamadaFuncao: T_ID . T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   52              | T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES
   70 FExpressaoAritmetica: T_ID .

    T_ABRE_PARENTESES  shift, and go to state 53

    $default  reduce using rule 70 (FExpressaoAritmetica)


State 44

   35 Retorno: T_RETURN T_LITERAL . T_PONTO_E_VIRGULA

    T_PONTO_E_VIRGULA  shift, and go to state 73


State 45

   69 FExpressaoAritmetica: T_NUM .

    $default  reduce using rule 69 (FExpressaoAritmetica)


State 46

   66 TExpressaoAritmetica: ChamadaFuncao .

    $default  reduce using rule 66 (TExpressaoAritmetica)


State 47

   34 Retorno: T_RETURN ExpressaoAritmetica . T_PONTO_E_VIRGULA
   57 ExpressaoAritmetica: ExpressaoAritmetica . T_ADICAO TExpressaoAritmetica
   58                    | ExpressaoAritmetica . T_SUBTRACAO TExpressaoAritmetica
   59                    | ExpressaoAritmetica . T_BIT_DIREITA TExpressaoAritmetica
   60                    | ExpressaoAritmetica . T_BIT_ESQUERDA TExpressaoAritmetica

    T_BIT_DIREITA      shift, and go to state 74
    T_BIT_ESQUERDA     shift, and go to state 75
    T_ADICAO           shift, and go to state 76
    T_SUBTRACAO        shift, and go to state 77
    T_PONTO_E_VIRGULA  shift, and go to state 78


State 48

   61 ExpressaoAritmetica: TExpressaoAritmetica .
   62 TExpressaoAritmetica: TExpressaoAritmetica . T_MULTIPLICACAO FExpressaoAritmetica
   63                     | TExpressaoAritmetica . T_DIVISAO FExpressaoAritmetica
   64                     | TExpressaoAritmetica . T_RESTO FExpressaoAritmetica

    T_MULTIPLICACAO  shift, and go to state 79
    T_DIVISAO        shift, and go to state 80
    T_RESTO          shift, and go to state 81

    $default  reduce using rule 61 (ExpressaoAritmetica)


State 49

   65 TExpressaoAritmetica: FExpressaoAritmetica .

    $default  reduce using rule 65 (TExpressaoAritmetica)


State 50

   42 CmdAtrib: T_ID T_ADICAO . T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   44         | T_ID T_ADICAO . T_ADICAO T_PONTO_E_VIRGULA

    T_ADICAO  shift, and go to state 82
    T_IGUAL   shift, and go to state 83


State 51

   43 CmdAtrib: T_ID T_SUBTRACAO . T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   45         | T_ID T_SUBTRACAO . T_SUBTRACAO T_PONTO_E_VIRGULA

    T_SUBTRACAO  shift, and go to state 84
    T_IGUAL      shift, and go to state 85


State 52

   40 CmdAtrib: T_ID T_IGUAL . ExpressaoAritmetica T_PONTO_E_VIRGULA
   41         | T_ID T_IGUAL . T_LITERAL T_PONTO_E_VIRGULA

    T_SUBTRACAO        shift, and go to state 41
    T_ABRE_PARENTESES  shift, and go to state 42
    T_ID               shift, and go to state 43
    T_LITERAL          shift, and go to state 86
    T_NUM              shift, and go to state 45

    ChamadaFuncao         go to state 46
    ExpressaoAritmetica   go to state 87
    TExpressaoAritmetica  go to state 48
    FExpressaoAritmetica  go to state 49


State 53

   51 ChamadaFuncao: T_ID T_ABRE_PARENTESES . ListaParametros T_FECHA_PARENTESES
   52              | T_ID T_ABRE_PARENTESES . T_FECHA_PARENTESES

    T_SUBTRACAO         shift, and go to state 41
    T_ABRE_PARENTESES   shift, and go to state 42
    T_FECHA_PARENTESES  shift, and go to state 88
    T_ID                shift, and go to state 43
    T_LITERAL           shift, and go to state 89
    T_NUM               shift, and go to state 45

    ChamadaFuncao         go to state 46
    ListaParametros       go to state 90
    ExpressaoAritmetica   go to state 91
    TExpressaoAritmetica  go to state 48
    FExpressaoAritmetica  go to state 49


State 54

   16 Declaracoes: Declaracoes Declaracao .

    $default  reduce using rule 16 (Declaracoes)


State 55

   14 BlocoPrincipal: T_ABRE_CHAVES Declaracoes ListaCmd . T_FECHA_CHAVES
   25 ListaCmd: ListaCmd . Comando

    T_FECHA_CHAVES  shift, and go to state 92
    T_IF            shift, and go to state 14
    T_WHILE         shift, and go to state 15
    T_PRINT         shift, and go to state 16
    T_READ          shift, and go to state 17
    T_RETURN        shift, and go to state 18
    T_ID            shift, and go to state 19

    Comando        go to state 59
    Retorno        go to state 25
    CmdSe          go to state 26
    CmdEnquanto    go to state 27
    CmdAtrib       go to state 28
    CmdEscrita     go to state 29
    CmdLeitura     go to state 30
    ChamadaProc    go to state 31
    ChamadaFuncao  go to state 32


State 56

   23 ListaId: T_ID .

    $default  reduce using rule 23 (ListaId)


State 57

   18 Declaracao: Tipo ListaId . T_PONTO_E_VIRGULA
   22 ListaId: ListaId . T_VIRGULA T_ID

    T_VIRGULA          shift, and go to state 93
    T_PONTO_E_VIRGULA  shift, and go to state 94


State 58

   15 BlocoPrincipal: T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES .

    $default  reduce using rule 15 (BlocoPrincipal)


State 59

   25 ListaCmd: ListaCmd Comando .

    $default  reduce using rule 25 (ListaCmd)


State 60

   50 ChamadaProc: ChamadaFuncao T_PONTO_E_VIRGULA .

    $default  reduce using rule 50 (ChamadaProc)


State 61

    5 Funcao: TipoRetorno T_ID T_ABRE_PARENTESES . DeclParametros T_FECHA_PARENTESES BlocoPrincipal
    6       | TipoRetorno T_ID T_ABRE_PARENTESES . T_FECHA_PARENTESES BlocoPrincipal

    T_FECHA_PARENTESES  shift, and go to state 95
    T_INT               shift, and go to state 11
    T_DOUBLE            shift, and go to state 12
    T_STRING            shift, and go to state 13

    DeclParametros  go to state 96
    Parametro       go to state 97
    Tipo            go to state 98


State 62

   67 FExpressaoAritmetica: T_ABRE_PARENTESES . ExpressaoAritmetica T_FECHA_PARENTESES
   76 FExpressaoLogica: T_ABRE_PARENTESES . ExpressaoLogica T_FECHA_PARENTESES

    T_SUBTRACAO        shift, and go to state 41
    T_ABRE_PARENTESES  shift, and go to state 62
    T_ID               shift, and go to state 43
    T_NUM              shift, and go to state 45
    T_NOT              shift, and go to state 63

    ChamadaFuncao         go to state 46
    ExpressaoAritmetica   go to state 99
    TExpressaoAritmetica  go to state 48
    FExpressaoAritmetica  go to state 49
    ExpressaoLogica       go to state 100
    FExpressaoLogica      go to state 66


State 63

   75 FExpressaoLogica: T_NOT . FExpressaoLogica

    T_SUBTRACAO        shift, and go to state 41
    T_ABRE_PARENTESES  shift, and go to state 62
    T_ID               shift, and go to state 43
    T_NUM              shift, and go to state 45
    T_NOT              shift, and go to state 63

    ChamadaFuncao         go to state 46
    ExpressaoAritmetica   go to state 64
    TExpressaoAritmetica  go to state 48
    FExpressaoAritmetica  go to state 49
    FExpressaoLogica      go to state 101


State 64

   57 ExpressaoAritmetica: ExpressaoAritmetica . T_ADICAO TExpressaoAritmetica
   58                    | ExpressaoAritmetica . T_SUBTRACAO TExpressaoAritmetica
   59                    | ExpressaoAritmetica . T_BIT_DIREITA TExpressaoAritmetica
   60                    | ExpressaoAritmetica . T_BIT_ESQUERDA TExpressaoAritmetica
   77 FExpressaoLogica: ExpressaoAritmetica . T_IGUAL_IGUAL ExpressaoAritmetica
   78                 | ExpressaoAritmetica . T_DIFERENTE ExpressaoAritmetica
   79                 | ExpressaoAritmetica . T_MAIOR ExpressaoAritmetica
   80                 | ExpressaoAritmetica . T_MAIOR_IGUAL ExpressaoAritmetica
   81                 | ExpressaoAritmetica . T_MENOR ExpressaoAritmetica
   82                 | ExpressaoAritmetica . T_MENOR_IGUAL ExpressaoAritmetica

    T_BIT_DIREITA   shift, and go to state 74
    T_BIT_ESQUERDA  shift, and go to state 75
    T_ADICAO        shift, and go to state 76
    T_SUBTRACAO     shift, and go to state 77
    T_MAIOR_IGUAL   shift, and go to state 102
    T_MENOR_IGUAL   shift, and go to state 103
    T_DIFERENTE     shift, and go to state 104
    T_IGUAL_IGUAL   shift, and go to state 105
    T_MAIOR         shift, and go to state 106
    T_MENOR         shift, and go to state 107


State 65

   36 CmdSe: T_IF T_ABRE_PARENTESES ExpressaoLogica . T_FECHA_PARENTESES MLogico Bloco
   37      | T_IF T_ABRE_PARENTESES ExpressaoLogica . T_FECHA_PARENTESES MLogico Bloco NLogico T_ELSE MLogico Bloco
   71 ExpressaoLogica: ExpressaoLogica . T_AND MLogico FExpressaoLogica
   72                | ExpressaoLogica . T_OR MLogico FExpressaoLogica

    T_FECHA_PARENTESES  shift, and go to state 108
    T_AND               shift, and go to state 109
    T_OR                shift, and go to state 110


State 66

   73 ExpressaoLogica: FExpressaoLogica .

    $default  reduce using rule 73 (ExpressaoLogica)


State 67

   39 CmdEnquanto: T_WHILE MLogico T_ABRE_PARENTESES . ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco

    T_SUBTRACAO        shift, and go to state 41
    T_ABRE_PARENTESES  shift, and go to state 62
    T_ID               shift, and go to state 43
    T_NUM              shift, and go to state 45
    T_NOT              shift, and go to state 63

    ChamadaFuncao         go to state 46
    ExpressaoAritmetica   go to state 64
    TExpressaoAritmetica  go to state 48
    FExpressaoAritmetica  go to state 49
    ExpressaoLogica       go to state 111
    FExpressaoLogica      go to state 66


State 68

   46 CmdEscrita: T_PRINT CmdEscritaMarcador T_ABRE_PARENTESES . ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   47           | T_PRINT CmdEscritaMarcador T_ABRE_PARENTESES . T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_SUBTRACAO        shift, and go to state 41
    T_ABRE_PARENTESES  shift, and go to state 42
    T_ID               shift, and go to state 43
    T_LITERAL          shift, and go to state 112
    T_NUM              shift, and go to state 45

    ChamadaFuncao         go to state 46
    ExpressaoAritmetica   go to state 113
    TExpressaoAritmetica  go to state 48
    FExpressaoAritmetica  go to state 49


State 69

   49 CmdLeitura: T_READ T_ABRE_PARENTESES T_ID . T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_FECHA_PARENTESES  shift, and go to state 114


State 70

   70 FExpressaoAritmetica: T_ID .

    $default  reduce using rule 70 (FExpressaoAritmetica)


State 71

   68 FExpressaoAritmetica: T_SUBTRACAO FExpressaoAritmetica .

    $default  reduce using rule 68 (FExpressaoAritmetica)


State 72

   57 ExpressaoAritmetica: ExpressaoAritmetica . T_ADICAO TExpressaoAritmetica
   58                    | ExpressaoAritmetica . T_SUBTRACAO TExpressaoAritmetica
   59                    | ExpressaoAritmetica . T_BIT_DIREITA TExpressaoAritmetica
   60                    | ExpressaoAritmetica . T_BIT_ESQUERDA TExpressaoAritmetica
   67 FExpressaoAritmetica: T_ABRE_PARENTESES ExpressaoAritmetica . T_FECHA_PARENTESES

    T_BIT_DIREITA       shift, and go to state 74
    T_BIT_ESQUERDA      shift, and go to state 75
    T_ADICAO            shift, and go to state 76
    T_SUBTRACAO         shift, and go to state 77
    T_FECHA_PARENTESES  shift, and go to state 115


State 73

   35 Retorno: T_RETURN T_LITERAL T_PONTO_E_VIRGULA .

    $default  reduce using rule 35 (Retorno)


State 74

   59 ExpressaoAritmetica: ExpressaoAritmetica T_BIT_DIREITA . TExpressaoAritmetica
